Sample website; Renamed Methods